show list projects

--- a/Views/Account/Profile.cshtml
+++ b/Views/Account/Profile.cshtml
@@ -1,4 +1,8 @@
-﻿@model TaskManagementSystem.ViewModels.ProfileViewModel
+﻿@{
+    ViewBag.Title = "Profile Page";
+}
+
+@model TaskManagementSystem.ViewModels.ProfileViewModel
 
 <h1>User Profile</h1>
 
