--- a/Views/Admin/EditRoles.cshtml
+++ b/Views/Admin/EditRoles.cshtml
@@ -1,4 +1,8 @@
-﻿@model TaskManagementSystem.ViewModels.EditUserRolesViewModel
+﻿@{
+    ViewBag.Title = "Management Role of User Page";
+}
+
+@model TaskManagementSystem.ViewModels.EditUserRolesViewModel
 
 <h1>Edit Roles for @Model.UserName</h1>
 
