--- a/Views/Admin/ManageUsers.cshtml
+++ b/Views/Admin/ManageUsers.cshtml
@@ -1,4 +1,8 @@
-﻿@model List<TaskManagementSystem.ViewModels.UsersViewModel>
+﻿@{
+    ViewBag.Title = "Management Role of User Page";
+}
+
+@model List<TaskManagementSystem.ViewModels.UsersViewModel>
 
 <h1>Manage Users</h1>
 
