--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -1,33 +1,50 @@
-﻿@model TaskManagementSystem.ViewModels.LoginViewModel
+﻿@{
+    ViewBag.Title = "Login Page";
+    Layout = "~/Views/Shared/_AuthLayout.cshtml";
+}
 
-<h2>Login</h2>
+@model TaskManagementSystem.ViewModels.LoginViewModel
+<div class="row justify-content-center">
+    <div class="card mt-5">
+        <div class="card-body">
+            <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
+            <form asp-action="Login">
 
-<form asp-action="Login">
-    <div class="form-group">
-        <label asp-for="Username"></label>
-        <input asp-for="Username" class="form-control" />
-        <span asp-validation-for="Username" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
-        <span asp-validation-for="Password" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <div class="form-check">
-            <input asp-for="RememberMe" class="form-check-input" />
-            <label asp-for="RememberMe" class="form-check-label"></label>
+                <div class="form-floating">
+                    <input asp-for="Username" type="text" class="form-control" id="floatingInput" placeholder="Username">
+                    <label asp-for="Username" for="floatingInput">Username</label>
+                    <span asp-validation-for="Username" class="text-danger"></span>
+                </div>
+                <div class="form-floating">
+                    <input asp-for="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <label asp-for="Password" for="floatingPassword">Password</label>
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+
+                <div class="form-check text-start my-3">
+                    <input asp-for="RememberMe" class="form-check-input" type="checkbox" id="flexCheckDefault">
+                    <label asp-for="RememberMe" class="form-check-label" for="flexCheckDefault">
+                        Remember me
+                    </label>
+                </div>
+                <button class="btn btn-primary w-100 py-2" type="submit">Login</button>
+            </form>
+
+            @if (!ViewData.ModelState.IsValid)
+            {
+                <div class="alert alert-danger mt-2" role="alert">
+                    <strong>Error:</strong> Invalid login attempt.
+                </div>
+            }
+
+            <div class="mt-3 text-center">
+                <a asp-controller="Home" asp-action="Index" class="btn btn-secondary mx-1">Home</a>
+                <a asp-controller="Account" asp-action="Register" class="btn btn-secondary mx-1">Register</a>
+            </div>
+
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-</form>
-
-@if (!ViewData.ModelState.IsValid)
-{
-    <div class="alert alert-danger" role="alert">
-        <strong>Error:</strong> Invalid login attempt.
-    </div>
-}
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
