--- a/Views/Projects/Add.cshtml
+++ b/Views/Projects/Add.cshtml
@@ -1,7 +1,5 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    var userId = User.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value;
 }
 
 @model TaskManagementSystem.ViewModels.AddProjectViewModel
@@ -9,6 +7,9 @@
 <h1>Add Project</h1>
 
 <form asp-action="Add" method="post">
+
+    <input type="hidden" asp-for="UserId" value="@userId" />
+
     <div class="mt-3">
         <label class="form-label">Name</label>
         <input type="text" class="form-control" asp-for="Name" />
