--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                                 data-bs-toggle="collapse" data-bs-target="#projects-collapse" aria-expanded="false">
                             Projects
                         </button>
-                        <a class="btn btn-secondary ml-2 text-end" asp-area="" asp-controller="Projects" asp-action="Add"><i class="bi bi-plus"></i></a>
+                        <a class="btn btn-outline-primary ml-2 text-end" asp-area="" asp-controller="Projects" asp-action="Add"><i class="bi bi-plus"></i></a>
                     </div>
 
                     <div class="collapse" id="projects-collapse">
