--- a/Views/Tasks/Add.cshtml
+++ b/Views/Tasks/Add.cshtml
@@ -21,25 +21,22 @@
         <input type="text" class="form-control" asp-for="Description" />
     </div>
 
-    <div class="mt-3">
-        <label class="form-label">Status</label>
-        <input type="text" class="form-control" asp-for="Status" />
-    </div>
+    <input type="hidden" class="form-control" asp-for="Status" />
 
     <div class="mt-3">
         <label class="form-label">Assigned To</label>
         <input type="text" class="form-control" asp-for="AssignedTo" />
     </div>
 
-    <div class="mt-3">
+    @*<div class="mt-3">
         <label class="form-label">Created At</label>
         <input type="datetime-local" class="form-control" asp-for="CreatedAt" />
-    </div>
+    </div>*@
 
-    <div class="mt-3">
+    @*<div class="mt-3">
         <label class="form-label">Updated At</label>
         <input type="datetime-local" class="form-control" asp-for="UpdatedAt" />
-    </div>
+    </div>*@
 
     <div class="mt-3">
         <label class="form-label">Due Date</label>
