show modal for add edit task edit project

--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -2,6 +2,8 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+
+    ViewData["Title"] = "Project Edit";
 }
 
 @model TaskManagementSystem.Models.Project
@@ -15,10 +17,7 @@
 else
 {
     <form asp-action="Edit" method="post">
-        <div class="mt-3">
-            <label class="form-label">Id</label>
-            <input type="text" class="form-control" asp-for="Project_id" readonly />
-        </div>
+        <input type="hidden" class="form-control" asp-for="Project_id" />
 
         <div class="mt-3">
             <label class="form-label">Name</label>
@@ -30,15 +29,7 @@ else
             <input type="text" class="form-control" asp-for="Description" />
         </div>
 
-        <div class="mt-3">
-            <label class="form-label">Created At</label>
-            <input type="datetime-local" class="form-control" asp-for="CreateAt" />
-        </div>
-
-        <div class="mt-3">
-            <label class="form-label">Updated At</label>
-            <input type="datetime-local" class="form-control" asp-for="UpdateAt" />
-        </div>
+        <input type="hidden" class="form-control" asp-for="UpdateAt" />
 
         <div class="mt-3">
             <button type="submit" class="btn btn-primary">Save</button>
