--- a/Views/Admin/EditRoles.cshtml
+++ b/Views/Admin/EditRoles.cshtml
@@ -17,11 +17,9 @@
         @foreach (var role in Model.Roles)
         {
             <div>
-                <input type="checkbox" name="UserRoles" value="@role"
-                       @(Model.UserRoles.Contains(role) ? "checked=\"checked\"" : "") /> @role
-                </div>
-            }
-
+                <input type="radio" name="UserRoles" value="@role" @(Model.UserRoles.Contains(role) ? "checked=\"checked\"" : "" ) /> @role
+            </div>
+        }
     </div>
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
