--- a/Views/Projects/Add.cshtml
+++ b/Views/Projects/Add.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     var userId = User.FindFirst(System.Security.Claims.ClaimTypes.NameIdentifier)?.Value;
+    ViewData["Title"] = "Add new project";
 }
 
 @model TaskManagementSystem.ViewModels.AddProjectViewModel
