--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TMSystem</title>
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/sidebar.css" />
+    <link rel="stylesheet" href="~/css/sidebarStyle.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -77,11 +77,11 @@
                 </li>
             </ul>
         </div>
-        <div class="col-9 p-4">
+        <div class="flex-grow-1">
             <!-- Main content here -->
-                <main role="main" class="pb-3">
-                    @RenderBody()
-                </main>
+            <main role="main" class="p-4">
+                @RenderBody()
+            </main>
         </div>
     </div>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
