--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -4,12 +4,12 @@
 }
 
 @model TaskManagementSystem.ViewModels.LoginViewModel
+
 <div class="row justify-content-center">
     <div class="card mt-5">
         <div class="card-body">
             <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
             <form asp-action="Login">
-
                 <div class="form-floating">
                     <input asp-for="Username" type="text" class="form-control" id="floatingInput" placeholder="Username">
                     <label asp-for="Username" for="floatingInput">Username</label>
@@ -20,7 +20,6 @@
                     <label asp-for="Password" for="floatingPassword">Password</label>
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
-
                 <div class="form-check text-start my-3">
                     <input asp-for="RememberMe" class="form-check-input" type="checkbox" id="flexCheckDefault">
                     <label asp-for="RememberMe" class="form-check-label" for="flexCheckDefault">
@@ -38,14 +37,35 @@
             }
 
             <div class="mt-3 text-center">
-                <a asp-controller="Home" asp-action="Index" class="btn btn-secondary mx-1">Home</a>
+                @{
+                    if (Model.ExternalLogins?.Count == 0)
+                    {
+                        <div>No external logins configured</div>
+                    }
+                    else
+                    {
+                        <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
+                            <div>
+                                @foreach (var provider in Model.ExternalLogins)
+                                {
+                                    <button type="submit" class="btn btn-primary"
+                                            name="provider" value="@provider.Name"
+                                            title="Log in using your @provider.DisplayName account">
+                                        @provider.DisplayName
+                                    </button>
+                                }
+                            </div>
+                        </form>
+                    }
+                }
                 <a asp-controller="Account" asp-action="Register" class="btn btn-secondary mx-1">Register</a>
             </div>
-
         </div>
     </div>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
