--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -44,14 +44,34 @@
         </form>
 
         <div class="mt-3 text-center">
-            <a asp-controller="Home" asp-action="Index" class="btn btn-secondary mx-1">Home</a>
+            @{
+                if (Model.ExternalLogins?.Count == 0)
+                {
+                    <div>No external logins configured</div>
+                }
+                else if (Model.ExternalLogins != null)
+                {
+                    <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
+                        <div>
+                            @foreach (var provider in Model.ExternalLogins)
+                            {
+                                <button type="submit" class="btn btn-primary"
+                                        name="provider" value="@provider.Name"
+                                        title="Log in using your @provider.DisplayName account">
+                                    @provider.DisplayName
+                                </button>
+                            }
+                        </div>
+                    </form>
+                }
+            }
             <a asp-controller="Account" asp-action="Login" class="btn btn-secondary mx-1">Login</a>
         </div>
     </div>
 </div>
 
-
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
