--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -11,12 +11,14 @@
             <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
             <form asp-action="Login">
                 <div class="form-floating">
-                    <input asp-for="Username" type="text" class="form-control" id="floatingInput" placeholder="Username">
+                    <input asp-for="Username" type="text" class="form-control" id="floatingInput"
+                           placeholder="Username">
                     <label asp-for="Username" for="floatingInput">Username</label>
                     <span asp-validation-for="Username" class="text-danger"></span>
                 </div>
                 <div class="form-floating">
-                    <input asp-for="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                    <input asp-for="Password" type="password" class="form-control" id="floatingPassword"
+                           placeholder="Password">
                     <label asp-for="Password" for="floatingPassword">Password</label>
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
@@ -48,17 +50,18 @@
                             <div>
                                 @foreach (var provider in Model.ExternalLogins)
                                 {
-                                    <button type="submit" class="btn btn-primary"
-                                            name="provider" value="@provider.Name"
+                                    <button class="btn btn-secondary mx-1" type="submit" name="provider" value="@provider.Name"
                                             title="Log in using your @provider.DisplayName account">
-                                        @provider.DisplayName
+
+                                        <i class="bi bi-google"></i>
                                     </button>
+
+                                    <a asp-controller="Account" asp-action="Register" class="btn btn-secondary mx-1">Register</a>
                                 }
                             </div>
                         </form>
                     }
                 }
-                <a asp-controller="Account" asp-action="Register" class="btn btn-secondary mx-1">Register</a>
             </div>
         </div>
     </div>
