--- a/Views/Shared/_AuthLayout.cshtml
+++ b/Views/Shared/_AuthLayout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - TMSystem</title>
     <link rel="stylesheet" href="~/css/login.css" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <meta name="viewport" content="width=device-width" />
 </head>
 <body class="d-flex align-items-center py-4 bg-body-tertiary">
