--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -10,11 +10,11 @@
         <h1 class="h3 mb-3 fw-normal text-center">Create an Account</h1>
 
         <form asp-action="Register">
-            <div class="form-floating mb-3">
-                <input asp-for="Username" type="text" class="form-control" id="floatingUsername" placeholder="Username">
-                <label asp-for="Username" for="floatingUsername">Username</label>
-                <span asp-validation-for="Username" class="text-danger"></span>
-            </div>
+            @*<div class="form-floating mb-3">
+            <input asp-for="Username" type="text" class="form-control" id="floatingUsername" placeholder="Username">
+            <label asp-for="Username" for="floatingUsername">Username</label>
+            <span asp-validation-for="Username" class="text-danger"></span>
+        </div>*@
 
             <div class="form-floating mb-3">
                 <input asp-for="Email" type="email" class="form-control" id="floatingEmail" placeholder="Email">
@@ -22,11 +22,11 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
 
-            <div class="form-floating mb-3">
-                <input asp-for="Fullname" type="text" class="form-control" id="floatingFullname" placeholder="Fullname">
-                <label asp-for="Fullname" for="floatingFullname">Fullname</label>
-                <span asp-validation-for="Fullname" class="text-danger"></span>
-            </div>
+            @*<div class="form-floating mb-3">
+            <input asp-for="Fullname" type="text" class="form-control" id="floatingFullname" placeholder="Fullname">
+            <label asp-for="Fullname" for="floatingFullname">Fullname</label>
+            <span asp-validation-for="Fullname" class="text-danger"></span>
+        </div>*@
 
             <div class="form-floating mb-3">
                 <input asp-for="Password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
@@ -40,7 +40,20 @@
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
 
-            <button class="btn btn-primary w-100 py-2" type="submit">Register</button>
+            <button class="btn btn-primary w-100 py-2" type="submit">Continue</button>
+
+            @if (!ViewData.ModelState.IsValid)
+            {
+                <div class="alert alert-danger" role="alert">
+                    <strong>Error:</strong> There was a problem with your profile save.
+                    <ul>
+                        @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+                        {
+                            <li>@error.ErrorMessage</li>
+                        }
+                    </ul>
+                </div>
+            }
         </form>
 
         <div class="mt-3 text-center">
