update task assignedTo

--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -279,7 +279,7 @@
                     <div class="mb-3">
                         <label for="AssignedTo" class="form-label">Assigned To</label>
                         <select class="form-control" id="AssignedTo" name="AssignedTo">
-                            <!-- Options will be loaded here -->
+                            Options will be loaded here
                         </select>
                     </div>
                     <div class="mb-3">
@@ -395,7 +395,7 @@
 
 @section Scripts {
     <script src="~/js/sortable-tasks.js"></script>
-    <script src="~/js/task-modal.js"></script>
+    <script src="~/js/task-add-edit-modal.js"></script>
     <script src="~/js/delete-task.js"></script>
     <script src="~/js/delete-project.js"></script>
     <script src="~/js/task-comments.js"></script>
